tests/l4-large/juice-test67.l4
//test error

// now let's check that typedef'd structs and ptrs work

struct list_header;
struct node;

typedef struct list_header* head_t;
typedef struct node* node_t;

struct list_header {
  struct node* head;
};

struct node {
  int data;
  struct node* next;
};


head_t gen_list(int n) {
  head_t list = alloc(struct list_header);
  node_t curr_node = NULL;
  for(int i = 0; i < n; i++) {
    node_t new_node = alloc(struct node);
    new_node->data = i;
    if (curr_node == NULL) {
      list->head = new_node;
      curr_node = new_node;
    } else {
      curr_node->next = new_node;
      curr_node = new_node;
    }
  }
  return list;
}

int get_value_at_ith(struct list_header *list, int i) {
  node_t curr_node = NULL;
  for(int idx = 0; idx <= i; i++) {
    if(curr_node == NULL) {
      curr_node = list->head;
    } else {
      curr_node = curr_node->next;
    }
  }
  return curr_node->data;
}

int main() {
  // error: can't declare structs in function bodies
  struct test_struct {
    int result_val;
  };
  head_t list = gen_list(10000);
  return get_value_at_ith(list, 411);
}